test/e2e/testdata/listenerset-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-listener-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: grpc-listener-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
    appProtocol: kubernetes.io/h2c
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-listener-backend
  namespace: gateway-conformance-infra
  labels:
    app: grpc-listener-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-listener-backend
  template:
    metadata:
      labels:
        app: grpc-listener-backend
    spec:
      containers:
      - name: grpc-listener-backend
        image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GRPC_ECHO_SERVER
          value: "1"
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: listener-grpcroute
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    namespace: gateway-conformance-infra
    name: listener-set-grpc
    sectionName: extra-grpc
  rules:
  - matches:
    - method:
        service: gateway_api_conformance.echo_basic.grpcecho.GrpcEcho
        method: Echo
    backendRefs:
    - name: grpc-listener-backend
      port: 8080
